--- a/translations/translation_pl.xml
+++ b/translations/translation_pl.xml
@@ -392,28 +392,28 @@
 		<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_UNLOADING_POSITION"		text="CP Shovel: Save unloading position" />
 		<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_UNLOADING_POSITION"		text="CP Shovel: Move to unloading position" />
 		<!--Editor-->
-		<text name="input_COURSEPLAY_EDITOR_TOGGLE"							text="Courseplay Editor: Toggle course editor" />
-		<text name="input_COURSEPLAY_EDITOR_UNDO"							text="Courseplay Editor: Undo last course edit" />
-		<text name="input_COURSEPLAY_EDITOR_SAVE"							text="Courseplay Editor: Save course changes" />
-		<text name="input_COURSEPLAY_EDITOR_SPEED_INCREASE"					text="Courseplay Editor: Increase waypoint speed" />
-		<text name="input_COURSEPLAY_EDITOR_SPEED_DECREASE"					text="Courseplay Editor: Decrease waypoint speed" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_WAYPOINT"				text="Courseplay Editor: Delete waypoint" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"			text="Courseplay Editor: Delete next waypoint" />  
-		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_START"				text="Courseplay Editor: Delete all waypoints to start" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_END"					text="Courseplay Editor: Delete all waypoints to end" />
-		<text name="input_COURSEPLAY_EDITOR_INSERT_WAYPOINT"				text="Courseplay Editor: Insert waypoint" />
-		<text name="input_COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"			text="Courseplay Editor: Change waypoint type" />
-		<text name="COURSEPLAY_EDITOR_TOGGLE"								text="Courseplay Editor: Toggle course editor" />
-		<text name="COURSEPLAY_EDITOR_UNDO"									text="Courseplay Editor: Undo last course edit" />
-		<text name="COURSEPLAY_EDITOR_SAVE"									text="Courseplay Editor: Save course changes" />
-		<text name="COURSEPLAY_EDITOR_SPEED_INCREASE"						text="Courseplay Editor: Increase waypoint speed" />
-		<text name="COURSEPLAY_EDITOR_SPEED_DECREASE"						text="Courseplay Editor: Decrease waypoint speed" />
-		<text name="COURSEPLAY_EDITOR_DELETE_WAYPOINT"						text="Courseplay Editor: Delete waypoint" />
-		<text name="COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"					text="Courseplay Editor: Delete next waypoint" />  
-		<text name="COURSEPLAY_EDITOR_DELETE_TO_START"						text="Courseplay Editor: Delete all waypoints to start" />
-		<text name="COURSEPLAY_EDITOR_DELETE_TO_END"						text="Courseplay Editor: Delete all waypoints to end" />
-		<text name="COURSEPLAY_EDITOR_INSERT_WAYPOINT"						text="Courseplay Editor: Insert waypoint" />
-		<text name="COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"					text="Courseplay Editor: Change waypoint type" />
+		<text name="input_COURSEPLAY_EDITOR_TOGGLE"							text="CP Edytor: Wł./Wył. edytor" />
+		<text name="input_COURSEPLAY_EDITOR_UNDO"							text="CP Edytor: Cofnij ostatnią edycję kursu" />
+		<text name="input_COURSEPLAY_EDITOR_SAVE"							text="CP Edytor: Zapisz zmiany kursu" />
+		<text name="input_COURSEPLAY_EDITOR_SPEED_INCREASE"					text="CP Edytor: Zwiększ prędkość punktu trasy" />
+		<text name="input_COURSEPLAY_EDITOR_SPEED_DECREASE"					text="CP Edytor: Zmniejsz prędkość punktu trasy" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_WAYPOINT"				text="CP Edytor: Usuń punkt trasy" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"			text="CP Edytor: Usuń następny punkt" />  
+		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_START"				text="CP Edytor: Usuń wszystkie punkty do startu" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_END"					text="CP Edytor: Usuń wszystkie punkty do końca" />
+		<text name="input_COURSEPLAY_EDITOR_INSERT_WAYPOINT"				text="CP Edytor: Wstaw punkt trasyt" />
+		<text name="input_COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"			text="CP Edytor: Zmień typ punktu trasy" />
+		<text name="COURSEPLAY_EDITOR_TOGGLE"								text="CP Edytor: Wł./Wył. edytor" />
+		<text name="COURSEPLAY_EDITOR_UNDO"									text="CP Edytor: Cofnij ostatnią edycję kursu" />
+		<text name="COURSEPLAY_EDITOR_SAVE"									text="CP Edytor: Zapisz zmiany kursu" />
+		<text name="COURSEPLAY_EDITOR_SPEED_INCREASE"						text="CP Edytor: Zwiększ prędkość punktu trasy" />
+		<text name="COURSEPLAY_EDITOR_SPEED_DECREASE"						text="CP Edytor: Zmniejsz prędkość punktu trasy" />
+		<text name="COURSEPLAY_EDITOR_DELETE_WAYPOINT"						text="CP Edytor: Usuń punkt trasy" />
+		<text name="COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"					text="CP Edytor: Usuń następny punkt" />  
+		<text name="COURSEPLAY_EDITOR_DELETE_TO_START"						text="CP Edytor: Usuń wszystkie punkty do startu" />
+		<text name="COURSEPLAY_EDITOR_DELETE_TO_END"						text="CP Edytor: Usuń wszystkie punkty do końca" />
+		<text name="COURSEPLAY_EDITOR_INSERT_WAYPOINT"						text="CP Edytor: Wstaw punkt trasy" />
+		<text name="COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"					text="CP Edytor: Zmień typ punktu trasy" />
 		
 		<text name="COURSEPLAY_EDITOR_NORMAL" 								text="Normalny" />
 		<text name="COURSEPLAY_EDITOR_WAIT" 								text="Oczekiwania" />
