--- a/translations/translation_cs.xml
+++ b/translations/translation_cs.xml
@@ -392,28 +392,28 @@
 		<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_UNLOADING_POSITION"		text="CP Shovel: Save unloading position" />
 		<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_UNLOADING_POSITION"		text="CP Shovel: Move to unloading position" />
 		<!--Editor-->
-		<text name="input_COURSEPLAY_EDITOR_TOGGLE"							text="Courseplay Editor: Toggle course editor" />
-		<text name="input_COURSEPLAY_EDITOR_UNDO"							text="Courseplay Editor: Undo last course edit" />
-		<text name="input_COURSEPLAY_EDITOR_SAVE"							text="Courseplay Editor: Save course changes" />
-		<text name="input_COURSEPLAY_EDITOR_SPEED_INCREASE"					text="Courseplay Editor: Increase waypoint speed" />
-		<text name="input_COURSEPLAY_EDITOR_SPEED_DECREASE"					text="Courseplay Editor: Decrease waypoint speed" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_WAYPOINT"				text="Courseplay Editor: Delete waypoint" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"			text="Courseplay Editor: Delete next waypoint" />  
-		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_START"				text="Courseplay Editor: Delete all waypoints to start" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_END"					text="Courseplay Editor: Delete all waypoints to end" />
-		<text name="input_COURSEPLAY_EDITOR_INSERT_WAYPOINT"				text="Courseplay Editor: Insert waypoint" />
-		<text name="input_COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"			text="Courseplay Editor: Change waypoint type" />
-		<text name="COURSEPLAY_EDITOR_TOGGLE"								text="Courseplay Editor: Toggle course editor" />
-		<text name="COURSEPLAY_EDITOR_UNDO"									text="Courseplay Editor: Undo last course edit" />
-		<text name="COURSEPLAY_EDITOR_SAVE"									text="Courseplay Editor: Save course changes" />
-		<text name="COURSEPLAY_EDITOR_SPEED_INCREASE"						text="Courseplay Editor: Increase waypoint speed" />
-		<text name="COURSEPLAY_EDITOR_SPEED_DECREASE"						text="Courseplay Editor: Decrease waypoint speed" />
-		<text name="COURSEPLAY_EDITOR_DELETE_WAYPOINT"						text="Courseplay Editor: Delete waypoint" />
-		<text name="COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"					text="Courseplay Editor: Delete next waypoint" />  
-		<text name="COURSEPLAY_EDITOR_DELETE_TO_START"						text="Courseplay Editor: Delete all waypoints to start" />
-		<text name="COURSEPLAY_EDITOR_DELETE_TO_END"						text="Courseplay Editor: Delete all waypoints to end" />
-		<text name="COURSEPLAY_EDITOR_INSERT_WAYPOINT"						text="Courseplay Editor: Insert waypoint" />
-		<text name="COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"					text="Courseplay Editor: Change waypoint type" />
+		<text name="input_COURSEPLAY_EDITOR_TOGGLE"							text="CP编辑器：切换CP编辑器" />
+		<text name="input_COURSEPLAY_EDITOR_UNDO"							text="CP编辑器：撤消上一次脚本编辑" />
+		<text name="input_COURSEPLAY_EDITOR_SAVE"							text="CP编辑器：保存对脚本的修改" />
+		<text name="input_COURSEPLAY_EDITOR_SPEED_INCREASE"					text="CP编辑器：提高路径点速度" />
+		<text name="input_COURSEPLAY_EDITOR_SPEED_DECREASE"					text="CP编辑器：降低路径点速度" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_WAYPOINT"				text="CP编辑器：删除路径点" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"			text="CP编辑器：删除下一个路径点" />  
+		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_START"				text="CP编辑器：删除所有路径点以开始" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_END"					text="CP编辑器：删除所有路径点以结束" />
+		<text name="input_COURSEPLAY_EDITOR_INSERT_WAYPOINT"				text="CP编辑器：插入路径点" />
+		<text name="input_COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"			text="CP编辑器：更改路径点类型" />
+		<text name="COURSEPLAY_EDITOR_TOGGLE"								text="CP编辑器：切换CP编辑器" />
+		<text name="COURSEPLAY_EDITOR_UNDO"									text="CP编辑器：撤消上一次脚本编辑" />
+		<text name="COURSEPLAY_EDITOR_SAVE"									text="CP编辑器：保存对脚本的修改" />
+		<text name="COURSEPLAY_EDITOR_SPEED_INCREASE"						text="CP编辑器：提高路径点速度" />
+		<text name="COURSEPLAY_EDITOR_SPEED_DECREASE"						text="CP编辑器：降低路径点速度" />
+		<text name="COURSEPLAY_EDITOR_DELETE_WAYPOINT"						text="CP编辑器：删除路径点" />
+		<text name="COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"					text="CP编辑器：删除下一个路径点" />  
+		<text name="COURSEPLAY_EDITOR_DELETE_TO_START"						text="CP编辑器：删除所有路径点以开始" />
+		<text name="COURSEPLAY_EDITOR_DELETE_TO_END"						text="CP编辑器：删除所有路径点以结束" />
+		<text name="COURSEPLAY_EDITOR_INSERT_WAYPOINT"						text="CP编辑器：插入路径点" />
+		<text name="COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"					text="CP编辑器：更改路径点类型" />
 		
 		<text name="COURSEPLAY_EDITOR_NORMAL" 								text="正常" />
 		<text name="COURSEPLAY_EDITOR_WAIT" 								text="等待" />
