--- a/translations/translation_jp.xml
+++ b/translations/translation_jp.xml
@@ -393,28 +393,28 @@
 		<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_UNLOADING_POSITION"		text="CP Shovel: Save unloading position" />
 		<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_UNLOADING_POSITION"		text="CP Shovel: Move to unloading position" />
 		<!--Editor-->
-		<text name="input_COURSEPLAY_EDITOR_TOGGLE"							text="Courseplay Editor: Toggle course editor" />
-		<text name="input_COURSEPLAY_EDITOR_UNDO"							text="Courseplay Editor: Undo last course edit" />
-		<text name="input_COURSEPLAY_EDITOR_SAVE"							text="Courseplay Editor: Save course changes" />
-		<text name="input_COURSEPLAY_EDITOR_SPEED_INCREASE"					text="Courseplay Editor: Increase waypoint speed" />
-		<text name="input_COURSEPLAY_EDITOR_SPEED_DECREASE"					text="Courseplay Editor: Decrease waypoint speed" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_WAYPOINT"				text="Courseplay Editor: Delete waypoint" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"			text="Courseplay Editor: Delete next waypoint" />  
-		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_START"				text="Courseplay Editor: Delete all waypoints to start" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_END"					text="Courseplay Editor: Delete all waypoints to end" />
-		<text name="input_COURSEPLAY_EDITOR_INSERT_WAYPOINT"				text="Courseplay Editor: Insert waypoint" />
-		<text name="input_COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"			text="Courseplay Editor: Change waypoint type" />
-		<text name="COURSEPLAY_EDITOR_TOGGLE"								text="Courseplay Editor: Toggle course editor" />
-		<text name="COURSEPLAY_EDITOR_UNDO"									text="Courseplay Editor: Undo last course edit" />
-		<text name="COURSEPLAY_EDITOR_SAVE"									text="Courseplay Editor: Save course changes" />
-		<text name="COURSEPLAY_EDITOR_SPEED_INCREASE"						text="Courseplay Editor: Increase waypoint speed" />
-		<text name="COURSEPLAY_EDITOR_SPEED_DECREASE"						text="Courseplay Editor: Decrease waypoint speed" />
-		<text name="COURSEPLAY_EDITOR_DELETE_WAYPOINT"						text="Courseplay Editor: Delete waypoint" />
-		<text name="COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"					text="Courseplay Editor: Delete next waypoint" />  
-		<text name="COURSEPLAY_EDITOR_DELETE_TO_START"						text="Courseplay Editor: Delete all waypoints to start" />
-		<text name="COURSEPLAY_EDITOR_DELETE_TO_END"						text="Courseplay Editor: Delete all waypoints to end" />
-		<text name="COURSEPLAY_EDITOR_INSERT_WAYPOINT"						text="Courseplay Editor: Insert waypoint" />
-		<text name="COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"					text="Courseplay Editor: Change waypoint type" />
+		<text name="input_COURSEPLAY_EDITOR_TOGGLE"							text="CPエディタ: コースエディタ切り替え" />
+		<text name="input_COURSEPLAY_EDITOR_UNDO"							text="CPエディタ: コースの変更をアンドゥ" />
+		<text name="input_COURSEPLAY_EDITOR_SAVE"							text="CPエディタ: コースの変更を保存" />
+		<text name="input_COURSEPLAY_EDITOR_SPEED_INCREASE"					text="CPエディタ: ウェイポイント速度を増加" />
+		<text name="input_COURSEPLAY_EDITOR_SPEED_DECREASE"					text="CPエディタ: ウェイポイント速度を減少" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_WAYPOINT"				text="CPエディタ: ウェイポイントを削除" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"			text="CPエディタ: 次のウェイポイントを削除" />  
+		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_START"				text="CPエディタ: 開始点までの全てのウェイポイントを削除" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_END"					text="CPエディタ: 終了点までの全てのウェイポイントを削除" />
+		<text name="input_COURSEPLAY_EDITOR_INSERT_WAYPOINT"				text="CPエディタ: ウェイポイントを追加" />
+		<text name="input_COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"			text="CPエディタ: ウェイポイントタイプを変更" />
+		<text name="COURSEPLAY_EDITOR_TOGGLE"								text="CPエディタ: コースエディタ切り替え" />
+		<text name="COURSEPLAY_EDITOR_UNDO"									text="CPエディタ: コースの変更をアンドゥ" />
+		<text name="COURSEPLAY_EDITOR_SAVE"									text="CPエディタ: コースの変更を保存" />
+		<text name="COURSEPLAY_EDITOR_SPEED_INCREASE"						text="CPエディタ: ウェイポイント速度を増加" />
+		<text name="COURSEPLAY_EDITOR_SPEED_DECREASE"						text="CPエディタ: ウェイポイント速度を減少" />
+		<text name="COURSEPLAY_EDITOR_DELETE_WAYPOINT"						text="CPエディタ: ウェイポイントを削除" />
+		<text name="COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"					text="CPエディタ: 次のウェイポイントを削除" />  
+		<text name="COURSEPLAY_EDITOR_DELETE_TO_START"						text="CPエディタ: 開始点までの全てのウェイポイントを削除" />
+		<text name="COURSEPLAY_EDITOR_DELETE_TO_END"						text="CPエディタ: 終了点までの全てのウェイポイントを削除" />
+		<text name="COURSEPLAY_EDITOR_INSERT_WAYPOINT"						text="CPエディタ: ウェイポイントを追加" />
+		<text name="COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"					text="CPエディタ: ウェイポイントタイプを変更" />
 		
 		<text name="COURSEPLAY_EDITOR_NORMAL" 								text="ノーマル" />
 		<text name="COURSEPLAY_EDITOR_WAIT" 								text="待機" />
