--- a/translations/translation_pt.xml
+++ b/translations/translation_pt.xml
@@ -387,28 +387,28 @@
 		<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_UNLOADING_POSITION"		text="CP Shovel: Save unloading position" />
 		<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_UNLOADING_POSITION"		text="CP Shovel: Move to unloading position" />
 		<!--Editor-->
-		<text name="input_COURSEPLAY_EDITOR_TOGGLE"							text="Courseplay Editor: Toggle course editor" />
-		<text name="input_COURSEPLAY_EDITOR_UNDO"							text="Courseplay Editor: Undo last course edit" />
-		<text name="input_COURSEPLAY_EDITOR_SAVE"							text="Courseplay Editor: Save course changes" />
-		<text name="input_COURSEPLAY_EDITOR_SPEED_INCREASE"					text="Courseplay Editor: Increase waypoint speed" />
-		<text name="input_COURSEPLAY_EDITOR_SPEED_DECREASE"					text="Courseplay Editor: Decrease waypoint speed" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_WAYPOINT"				text="Courseplay Editor: Delete waypoint" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"			text="Courseplay Editor: Delete next waypoint" />  
-		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_START"				text="Courseplay Editor: Delete all waypoints to start" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_END"					text="Courseplay Editor: Delete all waypoints to end" />
-		<text name="input_COURSEPLAY_EDITOR_INSERT_WAYPOINT"				text="Courseplay Editor: Insert waypoint" />
-		<text name="input_COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"			text="Courseplay Editor: Change waypoint type" />
-		<text name="COURSEPLAY_EDITOR_TOGGLE"								text="Courseplay Editor: Toggle course editor" />
-		<text name="COURSEPLAY_EDITOR_UNDO"									text="Courseplay Editor: Undo last course edit" />
-		<text name="COURSEPLAY_EDITOR_SAVE"									text="Courseplay Editor: Save course changes" />
-		<text name="COURSEPLAY_EDITOR_SPEED_INCREASE"						text="Courseplay Editor: Increase waypoint speed" />
-		<text name="COURSEPLAY_EDITOR_SPEED_DECREASE"						text="Courseplay Editor: Decrease waypoint speed" />
-		<text name="COURSEPLAY_EDITOR_DELETE_WAYPOINT"						text="Courseplay Editor: Delete waypoint" />
-		<text name="COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"					text="Courseplay Editor: Delete next waypoint" />  
-		<text name="COURSEPLAY_EDITOR_DELETE_TO_START"						text="Courseplay Editor: Delete all waypoints to start" />
-		<text name="COURSEPLAY_EDITOR_DELETE_TO_END"						text="Courseplay Editor: Delete all waypoints to end" />
-		<text name="COURSEPLAY_EDITOR_INSERT_WAYPOINT"						text="Courseplay Editor: Insert waypoint" />
-		<text name="COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"					text="Courseplay Editor: Change waypoint type" />
+		<text name="input_COURSEPLAY_EDITOR_TOGGLE"							text="Editor Courseplay: Ativa/desativa editor de percurso" />
+		<text name="input_COURSEPLAY_EDITOR_UNDO"							text="Editor Courseplay: Desfazer a última edição" />
+		<text name="input_COURSEPLAY_EDITOR_SAVE"							text="Editor Courseplay: Guardar mudanças do percurso" />
+		<text name="input_COURSEPLAY_EDITOR_SPEED_INCREASE"					text="Editor Courseplay: Aumentar a velocidade do waypoint" />
+		<text name="input_COURSEPLAY_EDITOR_SPEED_DECREASE"					text="Editor Courseplay: Diminuir a velocidade do waypoint" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_WAYPOINT"				text="Editor Courseplay: Apagar o waypoint" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"			text="Editor Courseplay: Apagar o próximo waypoint" />  
+		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_START"				text="Editor Courseplay: Eliminar todos os waypoints desde o começo" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_END"					text="Editor Courseplay: Eliminar todos os waypoints até ao fim" />
+		<text name="input_COURSEPLAY_EDITOR_INSERT_WAYPOINT"				text="Editor Courseplay: Inserir waypoint" />
+		<text name="input_COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"			text="Editor Courseplay: Mudar tipo de waypoint" />
+		<text name="COURSEPLAY_EDITOR_TOGGLE"								text="Editor Courseplay: Ativa/desativa editor de percurso" />
+		<text name="COURSEPLAY_EDITOR_UNDO"									text="Editor Courseplay: Desfazer a última edição" />
+		<text name="COURSEPLAY_EDITOR_SAVE"									text="Editor Courseplay: Guardar mudanças do percurso" />
+		<text name="COURSEPLAY_EDITOR_SPEED_INCREASE"						text="Editor Courseplay: Aumentar a velocidade do waypoint" />
+		<text name="COURSEPLAY_EDITOR_SPEED_DECREASE"						text="Editor Courseplay: Diminuir a velocidade do waypoint" />
+		<text name="COURSEPLAY_EDITOR_DELETE_WAYPOINT"						text="Editor Courseplay: Apagar o waypoint" />
+		<text name="COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"					text="Editor Courseplay: Apagar o próximo waypoint" />  
+		<text name="COURSEPLAY_EDITOR_DELETE_TO_START"						text="Editor Courseplay: Eliminar todos os waypoints desde o começo" />
+		<text name="COURSEPLAY_EDITOR_DELETE_TO_END"						text="Editor Courseplay: Eliminar todos os waypoints até ao fim" />
+		<text name="COURSEPLAY_EDITOR_INSERT_WAYPOINT"						text="Editor Courseplay: Inserir waypoint" />
+		<text name="COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"					text="Editor Courseplay: Mudar tipo de waypoint" />
 		
 		<text name="COURSEPLAY_EDITOR_NORMAL" 							 	text="Normal" />
 		<text name="COURSEPLAY_EDITOR_WAIT" 								text="Espera" />
